[gd_scene load_steps=16 format=2]

[ext_resource path="res://Ui/Scripts/Pause_Ui.gd" type="Script" id=1]
[ext_resource path="res://Assets/UI/Fonts/Spirit's Sword.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/Music/sonidos/open menu pause.wav" type="AudioStream" id=3]
[ext_resource path="res://Assets/Music/sonidos/press button.wav" type="AudioStream" id=4]
[ext_resource path="res://Assets/Music/sonidos/on button.wav" type="AudioStream" id=5]
[ext_resource path="res://Ui/Settings_Ui.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/UI/Buttons_press.tres" type="StyleBox" id=7]
[ext_resource path="res://Assets/UI/Buttons_normal.tres" type="StyleBox" id=8]
[ext_resource path="res://Assets/UI/Buttons_hover.tres" type="StyleBox" id=9]
[ext_resource path="res://Assets/UI/pause btn.png" type="Texture" id=10]

[sub_resource type="DynamicFont" id=1]
size = 70
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 30
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 30
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 30
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=8]
size = 30
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[node name="Pause_UI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="pausar" type="TextureButton" parent="."]
margin_left = 903.0
margin_top = 28.0
margin_right = 983.0
margin_bottom = 112.0
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 10 )
texture_hover = ExtResource( 10 )
texture_focused = ExtResource( 10 )
expand = true

[node name="Node" type="PanelContainer" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="Node"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 593.0
color = Color( 0.627451, 0.796078, 0.694118, 0.392157 )

[node name="VBoxPause" type="VBoxContainer" parent="Node"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 593.0
custom_constants/separation = 300
alignment = 1

[node name="RichTextLabel" type="Label" parent="Node/VBoxPause"]
margin_top = 51.0
margin_right = 1010.0
margin_bottom = 121.0
custom_fonts/font = SubResource( 1 )
text = "PAUSA"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Node/VBoxPause"]
margin_top = 421.0
margin_right = 1010.0
margin_bottom = 535.0
custom_constants/separation = 300
alignment = 1

[node name="VBoxButtons2" type="VBoxContainer" parent="Node/VBoxPause/HBoxContainer"]
margin_left = 190.0
margin_right = 390.0
margin_bottom = 114.0
custom_constants/separation = 30

[node name="Volver al menu" type="Button" parent="Node/VBoxPause/HBoxContainer/VBoxButtons2"]
margin_right = 200.0
margin_bottom = 42.0
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
custom_styles/hover = ExtResource( 9 )
custom_styles/pressed = ExtResource( 7 )
custom_styles/normal = ExtResource( 8 )
text = "Volver al Menu"

[node name="Salir" type="Button" parent="Node/VBoxPause/HBoxContainer/VBoxButtons2"]
margin_top = 72.0
margin_right = 200.0
margin_bottom = 114.0
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
custom_styles/hover = ExtResource( 9 )
custom_styles/pressed = ExtResource( 7 )
custom_styles/normal = ExtResource( 8 )
text = "Salir"

[node name="VBoxButtons" type="VBoxContainer" parent="Node/VBoxPause/HBoxContainer"]
margin_left = 690.0
margin_right = 820.0
margin_bottom = 114.0
custom_constants/separation = 30

[node name="Continuar" type="Button" parent="Node/VBoxPause/HBoxContainer/VBoxButtons"]
margin_right = 130.0
margin_bottom = 42.0
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = ExtResource( 9 )
custom_styles/pressed = ExtResource( 7 )
custom_styles/normal = ExtResource( 8 )
text = "Continuar"

[node name="Settings" type="Button" parent="Node/VBoxPause/HBoxContainer/VBoxButtons"]
margin_top = 72.0
margin_right = 130.0
margin_bottom = 114.0
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 8 )
custom_styles/hover = ExtResource( 9 )
custom_styles/pressed = ExtResource( 7 )
custom_styles/normal = ExtResource( 8 )
text = "Opciones"

[node name="settings" parent="Node" instance=ExtResource( 6 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 593.0

[node name="AudioAparecer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = 5.0
pitch_scale = 0.8
bus = "Sfx"

[node name="AudioMouseOnButton" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -10.0
bus = "Sfx"

[node name="AudioButton_Down" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "Sfx"

[connection signal="pressed" from="pausar" to="." method="_on_pausar_pressed"]
[connection signal="button_down" from="Node/VBoxPause/HBoxContainer/VBoxButtons2/Volver al menu" to="." method="_on_button_down"]
[connection signal="mouse_entered" from="Node/VBoxPause/HBoxContainer/VBoxButtons2/Volver al menu" to="." method="_on_mouse_entered"]
[connection signal="pressed" from="Node/VBoxPause/HBoxContainer/VBoxButtons2/Volver al menu" to="." method="_on_Volver_al_menu_pressed"]
[connection signal="button_down" from="Node/VBoxPause/HBoxContainer/VBoxButtons2/Salir" to="." method="_on_button_down"]
[connection signal="mouse_entered" from="Node/VBoxPause/HBoxContainer/VBoxButtons2/Salir" to="." method="_on_mouse_entered"]
[connection signal="pressed" from="Node/VBoxPause/HBoxContainer/VBoxButtons2/Salir" to="." method="_on_Salir_pressed"]
[connection signal="button_down" from="Node/VBoxPause/HBoxContainer/VBoxButtons/Continuar" to="." method="_on_button_down"]
[connection signal="mouse_entered" from="Node/VBoxPause/HBoxContainer/VBoxButtons/Continuar" to="." method="_on_mouse_entered"]
[connection signal="pressed" from="Node/VBoxPause/HBoxContainer/VBoxButtons/Continuar" to="." method="_on_Continuar_pressed"]
[connection signal="button_down" from="Node/VBoxPause/HBoxContainer/VBoxButtons/Settings" to="." method="_on_button_down"]
[connection signal="mouse_entered" from="Node/VBoxPause/HBoxContainer/VBoxButtons/Settings" to="." method="_on_mouse_entered"]
[connection signal="pressed" from="Node/VBoxPause/HBoxContainer/VBoxButtons/Settings" to="." method="_on_Settings_pressed"]
